--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Edit next line to provide your own name.
 title: Jerome Wasserman| Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://github.com/JeromeWasserman/JeromeWasserman.github.io/edit/main/_config.yml"
+url: "https://JeromeWasserman.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
